# solscore-new

./: Anchor.toml  README.md
programs/solscore-new/: Cargo.toml
programs/solscore-new/src/: lib.rs
tests/: solscore-new.ts
